Fix content position tablet and mobile

--- a/css/main.css
+++ b/css/main.css
@@ -318,12 +318,11 @@ img {
   width: 100%;
   min-width: calc(100vw - 14rem); /* Limit maximum width to 100vw minus tab widths */
   max-width: calc(100vw - 14rem); /* Limit minimum width to 100vw minus tab widths */
-  flex-shrink: 0;
   height: 100%;
   margin: 0;
   padding: 0;
   display: block;
-  position: absolute;
+ 
 }
 
 .paragraph-medium {
@@ -1995,10 +1994,13 @@ img {
   .tab_content {
     flex: 0 auto;
     width: 100vw;
+    max-width: 100vw;
+    min-width: 100vw;
     height: 100%;
     min-height: -webkit-fill-available;
     position: absolute;
     overflow: hidden;
+    white-space: normal;
   }
 
   .tab_content.active {
@@ -2017,7 +2019,10 @@ img {
 
   .tab-content-wrap {
     flex: 0 auto;
+    flex-shrink: auto;
     width: 100%;
+    min-width: 100%;
+    max-width: 100%;
     height: 90%;
     margin: 0;
   }
@@ -2409,7 +2414,6 @@ img {
   }
 
   .tab_content, .tab-content-wrap {
-    position: relative;
     height: 100dvh;
     min-height: -webkit-fill-available;
   }
@@ -2453,17 +2457,13 @@ img {
     padding-right: 0;
   }
 
-  .heading-style-h2 {
-    font-size: 2.5rem;
-  }
-
-  .fs-styleguide_section-header {
-    font-size: .875rem;
-  }
-
   .padding-section-large {
     padding-top: 4rem;
     padding-bottom: 4rem;
+  }
+
+  .heading-style-h2 {
+    font-size: 2rem;
   }
 
   .heading-style-h6 {
@@ -2596,6 +2596,10 @@ img {
     padding-top: 0;
     padding-bottom: 0;
     padding-right: 0;
+  }
+
+  .nav_button {
+    color: var(--color--light);
   }
 
   .padding-medium {
